force-app/main/default/objects/Contractor_Mapping__c/Contractor_Mapping__c.object-meta.xml
<CustomObject>
    <description>IM Customer Center - It Store the details of contractor</description>
    <label>Contractor Mapping</label>
    <nameField>
        <label>Contractor Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contractor Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>