force-app/main/default/objects/Contractor_Mapping__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contractor Account</description>
    <label>Contractor Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contractor Mappings</relationshipLabel>
    <relationshipName>Contractor_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>