force-app/main/default/objects/Contractor_Mapping__c/fields/Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Approval_Date__c</fullName>
    <description>Contractor Approval date.</description>
    <inlineHelpText>Contractor Approval date.</inlineHelpText>
    <label>Approval Date</label>
    <type>DateTime</type>
</CustomField>