force-app/main/default/objects/Contractor_Mapping__c/fields/Approved__c.field-meta.xml
<CustomField>
    <fullName>Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To Show if contarctor has approved the request or not.</description>
    <label>Approved</label>
    <type>Checkbox</type>
</CustomField>