force-app/main/default/objects/Contractor_Mapping__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contractor Contact</description>
    <label>Contractor Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contractor Mappings</relationshipLabel>
    <relationshipName>Contractor_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>