force-app/main/default/objects/Contractor_Mapping__c/fields/Contractor_CEM__c.field-meta.xml
<CustomField>
    <fullName>Contractor_CEM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contactor Contact Edition Mapping</description>
    <label>Contractor CEM</label>
    <referenceTo>Contact_Edition_Mapping__c</referenceTo>
    <relationshipLabel>Contractor Mappings</relationshipLabel>
    <relationshipName>Contractor_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>