force-app/main/default/objects/Contractor_Mapping__c/fields/Contractor_Status__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Status__c</fullName>
    <description>Contractor status shows status of contactor to Exhibitor who assigned them to work on their booth</description>
    <label>Contractor Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Contractor Nomination In Review</fullName>
            </value>
            <value>
                <fullName>New Contractor Nomination Rejected</fullName>
            </value>
            <value>
                <fullName>Contractor Nominated</fullName>
            </value>
            <value>
                <fullName>Contractor Accepted Nomination</fullName>
            </value>
            <value>
                <fullName>Contractor Declined Nomination</fullName>
            </value>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>Viewed</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>In Review</fullName>
            </value>
            <value>
                <fullName>Pending Sales Approval</fullName>
            </value>
            <value>
                <fullName>Stand Design Rejected/Incomplete</fullName>
            </value>
            <value>
                <fullName>Stand Design Resubmitted</fullName>
            </value>
            <value>
                <fullName>Pending Venue Approval</fullName>
            </value>
            <value>
                <fullName>Tentative Approval</fullName>
            </value>
            <value>
                <fullName>Permission to Build</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>