force-app/main/default/objects/Contractor_Mapping__c/fields/Edition__c.field-meta.xml
<CustomField>
    <fullName>Edition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Edition for stand</description>
    <label>Edition</label>
    <referenceTo>Edition__c</referenceTo>
    <relationshipLabel>Contractor Mappings</relationshipLabel>
    <relationshipName>Contractor_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>