force-app/main/default/objects/Contractor_Mapping__c/fields/Is_Managed_by_Agent__c.field-meta.xml
<CustomField>
    <fullName>Is_Managed_by_Agent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is booth managed by Agent</description>
    <label>Is Managed by Agent</label>
    <type>Checkbox</type>
</CustomField>