force-app/main/default/objects/Contractor_Mapping__c/fields/IS_Pavillion__c.field-meta.xml
<CustomField>
    <fullName>IS_Pavillion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IS Pavillion</label>
    <type>Checkbox</type>
</CustomField>