force-app/main/default/objects/Contractor_Mapping__c/fields/Is_Self_Managed__c.field-meta.xml
<CustomField>
    <fullName>Is_Self_Managed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is Self Managed</description>
    <label>Is Self Managed</label>
    <type>Checkbox</type>
</CustomField>