force-app/main/default/objects/Contractor_Mapping__c/fields/Latest_Stand_Detail__c.field-meta.xml
<CustomField>
    <fullName>Latest_Stand_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Capture the stand details in case of amendment</description>
    <label>Latest Stand Detail</label>
    <referenceTo>Stand_Detail__c</referenceTo>
    <relationshipLabel>Contractor Mappings</relationshipLabel>
    <relationshipName>Contractor_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>