force-app/main/default/objects/Contractor_Mapping__c/fields/Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason__c</fullName>
    <description>This field will be used to store the value when ops admin delete an assigned contractor under Stand Contractor</description>
    <label>Rejection Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>