force-app/main/default/objects/Contractor_Mapping__c/fields/TempContact__c.field-meta.xml
<CustomField>
    <fullName>TempContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Temp Contractor Contact</description>
    <label>Temp Contact</label>
    <referenceTo>TempContact__c</referenceTo>
    <relationshipLabel>Contractor Mappings</relationshipLabel>
    <relationshipName>Contractor_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>