force-app/main/default/objects/Contractor_Mapping__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Contractor_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>